...
    "applock.cancel": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
        }
      }
    },
    "applock.cover.deleteEverything": {
      "extractionState": "manual",
...
    "entry.delete.action": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
          }
        }
      }
    },
    "entry.delete.button": {
      "extractionState": "manual",
...
    "entry.time.accessibilityLabel": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Time"
          }
        }
      }
    },
    "entry.what": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "What"
          }
        }
      }
    },
    "entry.where.addAPlace": {
      "extractionState": "manual",
...
    "plan.today": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Today's plan"
          }
        }
      }
    },
    "plan.tomorrow": {
      "extractionState": "manual",
...
    "today.addEntry": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Add an entry"
          }
        }
      }
    },
    "today.collapseDay": {
      "extractionState": "manual",
...
    "today.reminders.notDetermined": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Allow notifications to get reminders."
          }
        }
      }
    },
    "today.reminders.denied": {
      "extractionState": "manual",
...
    "entry.feltLikeABinge": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "felt like a binge"
          }
        }
      }
    },
    "entry.context": {
      "extractionState": "manual",
...
    "export.title": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Export"
          }
        }
      }
    },
    "export.from": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "From"
          }
        }
      }
    },
    "export.to": {
      "extractionState": "manual",
...
    "export.makePDF": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Make PDF"
          }
        }
      }
    },
    "export.shareDisclosure": {
      "extractionState": "manual",
...
